--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,8 @@ button {
     text-transform: uppercase;
     color: #4d5AE5;
     margin-right: 76px;
+    display: flex;
+    align-items: center;
 }
 
 .logo-link {
