--- a/css/styles.css
+++ b/css/styles.css
@@ -24,10 +24,11 @@ address {
     font-style: normal;
 }
 
-ul {
+ul, li {
     list-style-type: none;
     padding-left: 0;
-    margin: 0;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 a {
@@ -40,14 +41,14 @@ button {
 
 .header {
     border-bottom: 1px solid #E7E9FC;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 
 .header-nav {
     display: flex;
     align-items: center;
-    color: #2E2F42;
-    justify-content: space-between;
 }
 
 .container {
@@ -71,8 +72,6 @@ button {
     text-transform: uppercase;
     color: #4d5AE5;
     margin-right: 76px;
-    display: flex;
-    align-items: center;
 }
 
 .logo-link {
@@ -92,6 +91,7 @@ button {
     color: #2E2F42;
     padding: 24px 0;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* .header-menu-item {
@@ -103,7 +103,21 @@ button {
     color:#404bbf
 }
 
+.control {
+    position: relative;
+    color: #404bbf;
+}
 
+.control::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+    background: #404bbf;
+}
 
 .address {
     font-style: normal;
@@ -116,10 +130,12 @@ button {
 }
 
 .address-link {
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-link:hover,
 .address-link:focus {
@@ -129,12 +145,27 @@ button {
 /* HERO */
 
 .hero {
-    background-color: #2E2F42;
-    padding-top: 188px;
-    padding-bottom: 188px;
+    background-color: #2e2f42;
+    padding: 188px 0;
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.hero-wrap {
+background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),
+        url(../images/people-office\ 1.jpg);
+}
+
+.hero:hover,
+.hero:focus {
+    background-color: #404bbf;
 }
 
 .hero-title {
+    font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
@@ -143,24 +174,28 @@ button {
     padding-bottom: 48px;
     max-width: 496px;
     margin: 0 auto;
+}
 
+.hero-title:hover,
+.hero-title:focus {
+    background-color: #404bbf;
 }
 
 .hero-buy-btn {
+    background: #4d5ae5;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #FFFFFF;
-    background-color: #4d5AE5;
     cursor: pointer;
-    margin: 0 auto;
     border: none;
-    padding: 16px 32px;
     border-radius: 4px;
-    gap: 10px;
     display: block;
     min-width: 169px;
+    height: 56px;
+    margin: 48px auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-buy-btn:hover,
@@ -194,6 +229,25 @@ button {
 
 .features-item {
     flex-basis: calc((100% - 72px) / 4);
+}
+
+.features-icon {
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f4f4fd;
+    margin-bottom: 8px;
+}
+
+.features-icon-content {
+    width: 64px;
+    height: 64px;
+    display: block;
+    margin: 24px;
 }
 
 .features-subtitle {
