--- a/css/styles.css
+++ b/css/styles.css
@@ -151,11 +151,14 @@ button {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    margin: 0 auto;
+    
 }
 
 .hero-wrap {
-background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-            rgba(46, 47, 66, 0.7)),
+background-image: linear-gradient(
+    rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)),
         url(../images/people-office\ 1.jpg);
 }
 
@@ -296,7 +299,7 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7),
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-    background: #FFFFFF;
+
 }
 
 .team-item-name {
@@ -304,7 +307,6 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7),
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    text-align: center;
     color: #2e2f42;
     margin-bottom: 8px;    
 }
@@ -320,12 +322,43 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7),
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    text-align: center;
     color: #434455;
-
 }
 
+.img {
+    display: block;
+}
 
+.team-item-icons {
+    gap: 24px;
+    padding: 16px;
+    display: flex;
+    justify-content: center;
+}
+
+.soc-link {
+    background-color: #4d5ae5;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.soc-link:hover {
+    background-color: #404bbf;
+}
+.soc-link:focus {
+    background-color: #404bbf;
+}
+
+.soc-link-icon {
+    fill: #f4f4fd;
+    justify-content: center;
+    align-items: center;
+}
 
 /* .portfolio {} */
 
@@ -342,6 +375,12 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7),
     text-align: center;
     color: #2E2F42;
     margin-bottom: 72px;
+}
+
+.portfolio-shadow {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+        0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list {
