--- a/css/styles.css
+++ b/css/styles.css
@@ -405,6 +405,9 @@ background-image: linear-gradient(
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.portfolio-item:hover .port-text {
+    transform: translateY(0);
+}
 .portfolio-list {
     display: flex;
     column-gap: 24px;
