--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,7 @@ button {
 /* HERO */
 
 .hero {
+    box-sizing: content-box;
     background-color: #2e2f42;
     padding: 188px 0;
     max-width: 1440px;
@@ -152,15 +153,15 @@ button {
     background-position: center;
     background-size: cover;
     margin: 0 auto;
-    
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
 }
 
-.hero-wrap {
+/* .hero-wrap {
 background-image: linear-gradient(
     rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)),
         url(../images/people-office\ 1.jpg);
-}
+} */
 
 .hero:hover,
 .hero:focus {
