--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ button {
     background-position: center;
     background-size: cover;
     margin: 0 auto;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office1.jpg);
 }
 
 /* .hero-wrap {
