--- a/css/styles.css
+++ b/css/styles.css
@@ -175,14 +175,14 @@ background-image: linear-gradient(
     letter-spacing: 0.02em;
     text-align: center;
     color: #FFFFFF;
-    padding-bottom: 48px;
+    /* padding-bottom: 48px; */
     max-width: 496px;
     margin: 0 auto;
 }
 
 .hero-title:hover,
 .hero-title:focus {
-    background-color: #404bbf;
+    /* background-color: #404bbf; */
 }
 
 .hero-buy-btn {
@@ -324,6 +324,7 @@ background-image: linear-gradient(
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    margin-bottom: 8px;
 }
 
 .img {
@@ -332,7 +333,7 @@ background-image: linear-gradient(
 
 .team-item-icons {
     gap: 24px;
-    padding: 16px;
+    /* padding: 16px; */
     display: flex;
     justify-content: center;
 }
@@ -379,8 +380,8 @@ background-image: linear-gradient(
 }
 
 .portfolio-shadow {
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-        0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    /* box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+        0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08); */
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
